# ClientServerApp

./: .gitignore  CLAUDE.md  CMakeLists.txt  clientwindow.cpp  clientwindow.h  clientwindow.ui  main.cpp  readme.txt
ClientApp/: CMakeLists.txt  client.cpp  client.h  main.cpp
ServerApp/: CMakeLists.txt  main.cpp  serverwindow.cpp  serverwindow.h  serverwindow.ui  tcpserver.cpp  tcpserver.h
